[gd_scene load_steps=4 format=3 uid="uid://bsw2hh0316i2e"]

[ext_resource type="Script" path="res://main/board/board.gd" id="1_30p0m"]
[ext_resource type="Script" path="res://main/editor/Editor.gd" id="1_ihjyf"]
[ext_resource type="PackedScene" uid="uid://5uiopnnkk16l" path="res://main/objects/confirmation_dialog/confirmation_dialog.tscn" id="3_8v2ai"]

[node name="Editor" type="Node2D"]
script = ExtResource("1_ihjyf")

[node name="board" type="ColorRect" parent="."]
offset_left = 46.0
offset_top = 158.0
offset_right = 614.0
offset_bottom = 726.0
color = Color(0.52549, 1, 1, 1)
script = ExtResource("1_30p0m")
metadata/_edit_use_anchors_ = true

[node name="left_check" type="CheckBox" parent="."]
offset_left = 292.0
offset_top = 764.0
offset_right = 316.0
offset_bottom = 788.0
metadata/_edit_use_anchors_ = true

[node name="top_check" type="CheckBox" parent="."]
offset_left = 318.0
offset_top = 740.0
offset_right = 342.0
offset_bottom = 764.0
metadata/_edit_use_anchors_ = true

[node name="right_check" type="CheckBox" parent="."]
offset_left = 350.0
offset_top = 765.0
offset_right = 374.0
offset_bottom = 789.0
metadata/_edit_use_anchors_ = true

[node name="bottom_check" type="CheckBox" parent="."]
offset_left = 319.0
offset_top = 788.0
offset_right = 343.0
offset_bottom = 812.0
metadata/_edit_use_anchors_ = true

[node name="target_check" type="CheckBox" parent="."]
offset_left = 318.0
offset_top = 765.0
offset_right = 342.0
offset_bottom = 789.0
metadata/_edit_use_anchors_ = true

[node name="save_button" type="Button" parent="."]
offset_left = 131.0
offset_top = 760.0
offset_right = 187.0
offset_bottom = 791.0
text = "Save"
metadata/_edit_use_anchors_ = true

[node name="load_button" type="Button" parent="."]
offset_left = 447.0
offset_top = 757.0
offset_right = 503.0
offset_bottom = 788.0
text = "Load"
metadata/_edit_use_anchors_ = true

[node name="new_button" type="Button" parent="."]
offset_left = 322.0
offset_top = 22.0
offset_right = 378.0
offset_bottom = 53.0
text = "New"
metadata/_edit_use_anchors_ = true

[node name="goto_game_button" type="Button" parent="."]
offset_left = 524.0
offset_top = 19.0
offset_right = 607.0
offset_bottom = 50.0
text = "Game"

[node name="level_combo" type="OptionButton" parent="."]
visible = false
offset_left = 55.0
offset_top = 21.0
offset_right = 273.0
offset_bottom = 43.0

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CenterContainer" type="CenterContainer" parent="Control"]
visible = false
layout_mode = 0
offset_right = 682.0
offset_bottom = 920.0
use_top_left = true

[node name="confirmation_dialog" parent="Control/CenterContainer" instance=ExtResource("3_8v2ai")]
initial_position = 0
visible = false
content_scale_factor = 0.5

[node name="back_button" type="Button" parent="."]
offset_left = 76.0
offset_top = 822.0
offset_right = 121.0
offset_bottom = 853.0
text = "Back"

[connection signal="gui_input" from="board/Square" to="board/Square" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18215" to="board/@ColorRect@18215" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18216" to="board/@ColorRect@18216" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18217" to="board/@ColorRect@18217" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18218" to="board/@ColorRect@18218" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18219" to="board/@ColorRect@18219" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18220" to="board/@ColorRect@18220" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18221" to="board/@ColorRect@18221" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18222" to="board/@ColorRect@18222" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18223" to="board/@ColorRect@18223" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18224" to="board/@ColorRect@18224" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18225" to="board/@ColorRect@18225" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18226" to="board/@ColorRect@18226" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18227" to="board/@ColorRect@18227" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18228" to="board/@ColorRect@18228" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18229" to="board/@ColorRect@18229" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18230" to="board/@ColorRect@18230" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18231" to="board/@ColorRect@18231" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18232" to="board/@ColorRect@18232" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18233" to="board/@ColorRect@18233" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18234" to="board/@ColorRect@18234" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18235" to="board/@ColorRect@18235" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18236" to="board/@ColorRect@18236" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18237" to="board/@ColorRect@18237" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18238" to="board/@ColorRect@18238" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18239" to="board/@ColorRect@18239" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18240" to="board/@ColorRect@18240" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18241" to="board/@ColorRect@18241" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18242" to="board/@ColorRect@18242" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18243" to="board/@ColorRect@18243" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18244" to="board/@ColorRect@18244" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18245" to="board/@ColorRect@18245" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18246" to="board/@ColorRect@18246" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18247" to="board/@ColorRect@18247" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18248" to="board/@ColorRect@18248" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18249" to="board/@ColorRect@18249" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18250" to="board/@ColorRect@18250" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18251" to="board/@ColorRect@18251" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18252" to="board/@ColorRect@18252" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18253" to="board/@ColorRect@18253" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18254" to="board/@ColorRect@18254" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18255" to="board/@ColorRect@18255" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18256" to="board/@ColorRect@18256" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18257" to="board/@ColorRect@18257" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18258" to="board/@ColorRect@18258" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18259" to="board/@ColorRect@18259" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18260" to="board/@ColorRect@18260" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18261" to="board/@ColorRect@18261" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18262" to="board/@ColorRect@18262" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18263" to="board/@ColorRect@18263" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18264" to="board/@ColorRect@18264" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18265" to="board/@ColorRect@18265" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18266" to="board/@ColorRect@18266" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18267" to="board/@ColorRect@18267" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18268" to="board/@ColorRect@18268" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18269" to="board/@ColorRect@18269" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18270" to="board/@ColorRect@18270" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18271" to="board/@ColorRect@18271" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18272" to="board/@ColorRect@18272" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18273" to="board/@ColorRect@18273" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18274" to="board/@ColorRect@18274" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18275" to="board/@ColorRect@18275" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18276" to="board/@ColorRect@18276" method="_on_gui_input"]
[connection signal="gui_input" from="board/@ColorRect@18277" to="board/@ColorRect@18277" method="_on_gui_input"]
[connection signal="pressed" from="left_check" to="." method="_on_left_check_pressed"]
[connection signal="pressed" from="top_check" to="." method="_on_top_check_pressed"]
[connection signal="pressed" from="right_check" to="." method="_on_right_check_pressed"]
[connection signal="pressed" from="bottom_check" to="." method="_on_bottom_check_pressed"]
[connection signal="pressed" from="target_check" to="." method="_on_target_check_pressed"]
[connection signal="pressed" from="save_button" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="load_button" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="new_button" to="." method="_on_new_button_pressed"]
[connection signal="pressed" from="goto_game_button" to="." method="_on_button_pressed"]
[connection signal="item_selected" from="level_combo" to="." method="_on_level_combo_item_selected"]
[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
